[package]
name = "but"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
zip = "2.1.3"
walkdir = "2.5.0"
zstd = "0.13.2"
tar = "0.4.41"